// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIcon renders 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <Loading
    active={true}
    className="security--status-icon__icon"
    description="Active loading indicator"
    small={false}
    withOverlay={false}
  />
</div>
`;

exports[`StatusIcon renders the 'complete' variation 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <Icon
    className="security--status-icon__icon security--status-icon__icon--success"
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
  />
  <span
    className=" security--status-icon__message"
  >
    complete
  </span>
</div>
`;

exports[`StatusIcon renders the 'error' variation 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <span
    className="security--status-icon__icon--color security--status-icon__icon--color--error"
  />
  <span
    className=" security--status-icon__message"
  >
    error
  </span>
</div>
`;

exports[`StatusIcon renders the 'info' variation 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <span
    className="security--status-icon__icon--color security--status-icon__icon--color--info"
  />
  <span
    className=" security--status-icon__message"
  >
    info
  </span>
</div>
`;

exports[`StatusIcon renders the 'lg' variation 1`] = `
<div
  className="security--status-icon security--status-icon--lg"
>
  <Loading
    active={true}
    className="security--status-icon__icon"
    description="Active loading indicator"
    small={false}
    withOverlay={false}
  />
</div>
`;

exports[`StatusIcon renders the 'md' variation 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <Loading
    active={true}
    className="security--status-icon__icon"
    description="Active loading indicator"
    small={false}
    withOverlay={false}
  />
</div>
`;

exports[`StatusIcon renders the 'sm' variation 1`] = `
<div
  className="security--status-icon security--status-icon--sm"
>
  <Loading
    active={true}
    className="security--status-icon__icon"
    description="Active loading indicator"
    small={false}
    withOverlay={false}
  />
</div>
`;

exports[`StatusIcon renders the 'success' variation 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <span
    className="security--status-icon__icon--color security--status-icon__icon--color--success"
  />
  <span
    className=" security--status-icon__message"
  >
    success
  </span>
</div>
`;

exports[`StatusIcon renders the 'unknown' variation 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <span
    className="security--status-icon__icon--color security--status-icon__icon--color--unknown"
  />
  <span
    className=" security--status-icon__message"
  >
    unknown
  </span>
</div>
`;

exports[`StatusIcon renders the 'warning' variation 1`] = `
<div
  className="security--status-icon security--status-icon--md"
>
  <span
    className="security--status-icon__icon--color security--status-icon__icon--color--warning"
  />
  <span
    className=" security--status-icon__message"
  >
    warning
  </span>
</div>
`;
